base/prometheus/statefulset.k8s.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
spec:
  revisionHistoryLimit: 1
  serviceName: prometheus
  template:
    spec:
      enableServiceLinks: false
      serviceAccountName: prometheus
      securityContext:
        fsGroup: 65534
        supplementalGroups:
          - 0
      containers:
        - name: prometheus
          image: prom/prometheus:latest
          args:
            - --config.file=/config/prometheus.yml
            - --web.listen-address=0.0.0.0:9090
            - --web.external-url=https://prometheus.k.seankhliao.com
            - --storage.tsdb.path=/data
            - --storage.tsdb.retention.size=50GB
            - --storage.tsdb.allow-overlapping-blocks
          ports:
            - name: http-prometheus
              containerPort: 9090
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data
              name: data
      volumes:
        - name: config
          configMap:
            name: prometheus
        - name: data
          persistentVolumeClaim:
            claimName: prometheus
