base/prometheus/service.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  ports:
    - name: http-prometheus
      port: 80
      protocol: TCP
      targetPort: http-prometheus
