base/prometheus/virtualservice.k8s.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus
spec:
  hosts:
    - prometheus.k.seankhliao.com
  gateways:
    - prometheus
  http:
    - route:
        - destination:
            host: prometheus.prometheus.svc.cluster.local
            port:
              number: 80
